objects/Crypto_Transaction__c.object
<CustomObject>
    <description>Crypto transactions made on the JIL platform</description>
    <label>Crypto Transaction</label>
    <nameField>
        <displayFormat>TX-{000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crypto Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    
    <!-- Relationships -->
    <fields>
        <fullName>Token_Purchaser__c</fullName>
        <label>Token Purchaser</label>
        <referenceTo>Token_Purchaser__c</referenceTo>
        <relationshipLabel>Crypto Transactions</relationshipLabel>
        <relationshipName>Crypto_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Wallet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Wallet</label>
        <referenceTo>Crypto_Wallet__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    
    <!-- Transaction Details -->
    <fields>
        <fullName>Transaction_Hash__c</fullName>
        <label>Transaction Hash</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
        <caseSensitive>true</caseSensitive>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                    <default>true</default>
                    <label>Purchase</label>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Transfer In</fullName>
                </value>
                <value>
                    <fullName>Transfer Out</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Stake</fullName>
                </value>
                <value>
                    <fullName>Unstake</fullName>
                </value>
                <value>
                    <fullName>Reward</fullName>
                </value>
                <value>
                    <fullName>Airdrop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token_Symbol__c</fullName>
        <label>Token Symbol</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Name__c</fullName>
        <label>Token Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Amount__c</fullName>
        <label>Token Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_Amount__c</fullName>
        <label>USD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Per_Token__c</fullName>
        <label>Price Per Token (USD)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Fee__c</fullName>
        <label>Transaction Fee (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_Fee__c</fullName>
        <label>Gas Fee</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blockchain_Network__c</fullName>
        <label>Blockchain Network</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JIL</fullName>
                    <default>true</default>
                    <label>JIL</label>
                </value>
                <value>
                    <fullName>Ethereum</fullName>
                </value>
                <value>
                    <fullName>Bitcoin</fullName>
                </value>
                <value>
                    <fullName>Solana</fullName>
                </value>
                <value>
                    <fullName>Polygon</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Block_Number__c</fullName>
        <label>Block Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmations__c</fullName>
        <label>Confirmations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_DateTime__c</fullName>
        <label>Transaction Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <label>To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>Crypto</fullName>
                    <default>true</default>
                    <label>Crypto</label>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>

    <!-- ============================================ -->
    <!-- VALIDATION RULES: Transaction Hash Format    -->
    <!-- ============================================ -->

    <!-- EVM chains (Ethereum, Polygon, JIL): 0x + 64 hex chars (66 total) -->
    <validationRules>
        <fullName>EVM_Transaction_Hash_Format</fullName>
        <active>true</active>
        <description>Validates transaction hash format for EVM-compatible chains (Ethereum, Polygon, JIL). Must be 0x prefix followed by exactly 64 hexadecimal characters.</description>
        <errorConditionFormula>AND(
    NOT(ISBLANK(Transaction_Hash__c)),
    OR(
        ISPICKVAL(Blockchain_Network__c, "Ethereum"),
        ISPICKVAL(Blockchain_Network__c, "Polygon"),
        ISPICKVAL(Blockchain_Network__c, "JIL")
    ),
    NOT(REGEX(Transaction_Hash__c, "^0x[0-9a-fA-F]{64}$"))
)</errorConditionFormula>
        <errorDisplayField>Transaction_Hash__c</errorDisplayField>
        <errorMessage>Transaction hash must be a valid EVM format: 0x followed by exactly 64 hexadecimal characters (e.g., 0x1a2b3c...). Please copy the exact hash from the blockchain explorer.</errorMessage>
    </validationRules>

    <!-- Bitcoin: 64 hex chars (no 0x prefix) -->
    <validationRules>
        <fullName>Bitcoin_Transaction_Hash_Format</fullName>
        <active>true</active>
        <description>Validates Bitcoin transaction hash (TXID). Must be exactly 64 hexadecimal characters without a 0x prefix.</description>
        <errorConditionFormula>AND(
    NOT(ISBLANK(Transaction_Hash__c)),
    ISPICKVAL(Blockchain_Network__c, "Bitcoin"),
    NOT(REGEX(Transaction_Hash__c, "^[0-9a-fA-F]{64}$"))
)</errorConditionFormula>
        <errorDisplayField>Transaction_Hash__c</errorDisplayField>
        <errorMessage>Bitcoin transaction hash must be exactly 64 hexadecimal characters without a 0x prefix. Please copy the exact TXID from the blockchain explorer.</errorMessage>
    </validationRules>

    <!-- Solana: Base58 encoded, 87-88 characters -->
    <validationRules>
        <fullName>Solana_Transaction_Hash_Format</fullName>
        <active>true</active>
        <description>Validates Solana transaction signature. Must be 87-88 base58 characters (alphanumeric excluding 0, O, I, l).</description>
        <errorConditionFormula>AND(
    NOT(ISBLANK(Transaction_Hash__c)),
    ISPICKVAL(Blockchain_Network__c, "Solana"),
    NOT(REGEX(Transaction_Hash__c, "^[1-9A-HJ-NP-Za-km-z]{87,88}$"))
)</errorConditionFormula>
        <errorDisplayField>Transaction_Hash__c</errorDisplayField>
        <errorMessage>Solana transaction signature must be 87-88 base58 characters. Please copy the exact signature from Solana Explorer.</errorMessage>
    </validationRules>

</CustomObject>